style.css
body {
    display: flex;
    flex-direction: column;
    font-family:Arial, Helvetica, sans-serif;
    margin: 0;
}

.top-section {
    background-color: #1F2937;
    display: flex;
    flex-direction: column;
}

.header {
    display: flex;
    justify-content: space-between;
}

ul,
.banner-text {
    color: #E5E7EB;
    font-size: 18px;
}

ul {
    list-style: none;
    padding-left: 0px;
    display: flex;
    gap: 10px;
    align-items: center;
}

.banner {
    display: flex;
}

.banner-section-1 {
    flex-shrink: 1;
}

.banner-section-2 {
    flex-shrink: 1;
    display: flex;
    align-self: flex-end;
}

.banner-image {
    max-width: 85%;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    align-self: flex-start;
}

.banner-headline {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
}

button {
    background-color: #3882f6;
    color: white;
    border-radius: 5px;
}

.middle-section {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.our-team {
    display: flex;
    justify-content: space-evenly;
}

.team-profile {
    max-width: 200px;
    padding: 8px;
}

.team-images {
    height: 200px;
    width: 200px;
    border-radius: 5px;
}

.inspirational.quote {
    display: flex;
    flex-direction: column;
    
}

.quote {
    text-align: justify;
    flex-basis: 800px;
}

.attribution {
    text-align: end;
}

